--- a/libmsiecf.spec.in
+++ b/libmsiecf.spec.in
@@ -1,17 +1,17 @@
 Name: libmsiecf
 Version: @VERSION@
 Release: 1
-Summary: Library to access the MSIE Cache File (index.dat) format.
+Summary: Library to access the MSIE Cache File (index.dat) format
 Group: System Environment/Libraries
 License: LGPL
 Source: %{name}-%{version}.tar.gz
-URL: https://github.com/libyal/libmsiecf/
+URL: https://github.com/libyal/libmsiecf
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
-@libmsiecf_spec_requires@ @ax_libbfio_spec_requires@ @ax_libcdata_spec_requires@ @ax_libcerror_spec_requires@ @ax_libcfile_spec_requires@ @ax_libclocale_spec_requires@ @ax_libcnotify_spec_requires@ @ax_libcpath_spec_requires@ @ax_libcsplit_spec_requires@ @ax_libcthreads_spec_requires@ @ax_libfole_spec_requires@ @ax_libfvalue_spec_requires@ @ax_libuna_spec_requires@
+@libmsiecf_spec_requires@ @ax_libbfio_spec_requires@ @ax_libcdata_spec_requires@ @ax_libcerror_spec_requires@ @ax_libcfile_spec_requires@ @ax_libclocale_spec_requires@ @ax_libcnotify_spec_requires@ @ax_libcpath_spec_requires@ @ax_libcsplit_spec_requires@ @ax_libcthreads_spec_requires@ @ax_libfdatetime_spec_requires@ @ax_libfguid_spec_requires@ @ax_libfole_spec_requires@ @ax_libfvalue_spec_requires@ @ax_libuna_spec_requires@
 @libmsiecf_spec_build_requires@ @ax_libbfio_spec_build_requires@ @ax_libcdata_spec_build_requires@ @ax_libcerror_spec_build_requires@ @ax_libcfile_spec_build_requires@ @ax_libclocale_spec_build_requires@ @ax_libcnotify_spec_build_requires@ @ax_libcpath_spec_build_requires@ @ax_libcsplit_spec_build_requires@ @ax_libcthreads_spec_build_requires@ @ax_libfdatetime_spec_build_requires@ @ax_libfguid_spec_build_requires@ @ax_libfole_spec_build_requires@ @ax_libfvalue_spec_build_requires@ @ax_libuna_spec_build_requires@
 
 %description
-libmsiecf is a library to access the MSIE Cache File (index.dat) format.
+Library to access the MSIE Cache File (index.dat) format
 
 %package devel
 Summary: Header files and libraries for developing applications for libmsiecf
@@ -20,14 +20,6 @@ Requires: libmsiecf = %{version}-%{release}
 
 %description devel
 Header files and libraries for developing applications for libmsiecf.
-
-%package tools
-Summary: Several tools for reading MSIE Cache File (index.dat).
-Group: Applications/System
-Requires: libmsiecf = %{version}-%{release}
-
-%description tools
-Several tools for reading MSIE Cache File (index.dat).
 
 %package python
 Summary: Python 2 bindings for libmsiecf
@@ -46,6 +38,14 @@ BuildRequires: python3-devel
 
 %description python3
 Python 3 bindings for libmsiecf
+
+%package tools
+Summary: Several tools for reading MSIE Cache File (index.dat)
+Group: Applications/System
+Requires: libmsiecf = %{version}-%{release}
+
+%description tools
+Several tools for reading MSIE Cache File (index.dat)
 
 %prep
 %setup -q
@@ -80,13 +80,6 @@ rm -rf %{buildroot}
 %{_includedir}/*
 %{_mandir}/man3/*
 
-%files tools
-%defattr(644,root,root,755)
-%doc AUTHORS COPYING NEWS README
-%attr(755,root,root) %{_bindir}/msiecfexport
-%attr(755,root,root) %{_bindir}/msiecfinfo
-%{_mandir}/man1/*
-
 %files python
 %defattr(644,root,root,755)
 %doc AUTHORS COPYING NEWS README
@@ -101,6 +94,11 @@ rm -rf %{buildroot}
 %{_libdir}/python3*/site-packages/*.la
 %{_libdir}/python3*/site-packages/*.so
 
+%files tools
+%defattr(644,root,root,755)
+%doc AUTHORS COPYING NEWS README
+%attr(755,root,root) %{_bindir}/*
+%{_mandir}/man1/*
 %changelog
 * @SPEC_DATE@ Joachim Metz <joachim.metz@gmail.com> @VERSION@-1
 - Auto-generated
