--- a/libmsiecf.spec.in
+++ b/libmsiecf.spec.in
@@ -8,43 +8,45 @@ Source: %{name}-%{version}.tar.gz
 URL: https://github.com/libyal/libmsiecf
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 @libmsiecf_spec_requires@ @ax_libbfio_spec_requires@ @ax_libcdata_spec_requires@ @ax_libcerror_spec_requires@ @ax_libcfile_spec_requires@ @ax_libclocale_spec_requires@ @ax_libcnotify_spec_requires@ @ax_libcpath_spec_requires@ @ax_libcsplit_spec_requires@ @ax_libcthreads_spec_requires@ @ax_libfdatetime_spec_requires@ @ax_libfguid_spec_requires@ @ax_libfole_spec_requires@ @ax_libfvalue_spec_requires@ @ax_libuna_spec_requires@
-@libmsiecf_spec_build_requires@ @ax_libbfio_spec_build_requires@ @ax_libcdata_spec_build_requires@ @ax_libcerror_spec_build_requires@ @ax_libcfile_spec_build_requires@ @ax_libclocale_spec_build_requires@ @ax_libcnotify_spec_build_requires@ @ax_libcpath_spec_build_requires@ @ax_libcsplit_spec_build_requires@ @ax_libcthreads_spec_build_requires@ @ax_libfdatetime_spec_build_requires@ @ax_libfguid_spec_build_requires@ @ax_libfole_spec_build_requires@ @ax_libfvalue_spec_build_requires@ @ax_libuna_spec_build_requires@
+BuildRequires: gcc @ax_libbfio_spec_build_requires@ @ax_libcdata_spec_build_requires@ @ax_libcerror_spec_build_requires@ @ax_libcfile_spec_build_requires@ @ax_libclocale_spec_build_requires@ @ax_libcnotify_spec_build_requires@ @ax_libcpath_spec_build_requires@ @ax_libcsplit_spec_build_requires@ @ax_libcthreads_spec_build_requires@ @ax_libfdatetime_spec_build_requires@ @ax_libfguid_spec_build_requires@ @ax_libfole_spec_build_requires@ @ax_libfvalue_spec_build_requires@ @ax_libuna_spec_build_requires@
 
-%description
+%description -n libmsiecf
 Library to access the MSIE Cache File (index.dat) format
 
-%package devel
+%package -n libmsiecf-devel
 Summary: Header files and libraries for developing applications for libmsiecf
 Group: Development/Libraries
 Requires: libmsiecf = %{version}-%{release}
 
-%description devel
+%description -n libmsiecf-devel
 Header files and libraries for developing applications for libmsiecf.
 
-%package python
+%package -n libmsiecf-python2
+Obsoletes: libmsiecf-python < %{version}
+Provides: libmsiecf-python = %{version}
 Summary: Python 2 bindings for libmsiecf
 Group: System Environment/Libraries
-Requires: libmsiecf = %{version}-%{release} python
-BuildRequires: python-devel
+Requires: libmsiecf = %{version}-%{release} python2
+BuildRequires: python2-devel
 
-%description python
+%description -n libmsiecf-python2
 Python 2 bindings for libmsiecf
 
-%package python3
+%package -n libmsiecf-python3
 Summary: Python 3 bindings for libmsiecf
 Group: System Environment/Libraries
 Requires: libmsiecf = %{version}-%{release} python3
 BuildRequires: python3-devel
 
-%description python3
+%description -n libmsiecf-python3
 Python 3 bindings for libmsiecf
 
-%package tools
+%package -n libmsiecf-tools
 Summary: Several tools for reading MSIE Cache File (index.dat)
 Group: Applications/System
 Requires: libmsiecf = %{version}-%{release}
 
-%description tools
+%description -n libmsiecf-tools
 Several tools for reading MSIE Cache File (index.dat)
 
 %prep
@@ -65,13 +67,13 @@ rm -rf %{buildroot}
 
 %postun -p /sbin/ldconfig
 
-%files
+%files -n libmsiecf
 %defattr(644,root,root,755)
 %license COPYING
 %doc AUTHORS README
 %attr(755,root,root) %{_libdir}/*.so.*
 
-%files devel
+%files -n libmsiecf-devel
 %defattr(644,root,root,755)
 %license COPYING
 %doc AUTHORS README ChangeLog
@@ -82,7 +84,7 @@ rm -rf %{buildroot}
 %{_includedir}/*
 %{_mandir}/man3/*
 
-%files python
+%files -n libmsiecf-python2
 %defattr(644,root,root,755)
 %license COPYING
 %doc AUTHORS README
@@ -90,7 +92,7 @@ rm -rf %{buildroot}
 %{_libdir}/python2*/site-packages/*.la
 %{_libdir}/python2*/site-packages/*.so
 
-%files python3
+%files -n libmsiecf-python3
 %defattr(644,root,root,755)
 %license COPYING
 %doc AUTHORS README
@@ -98,7 +100,7 @@ rm -rf %{buildroot}
 %{_libdir}/python3*/site-packages/*.la
 %{_libdir}/python3*/site-packages/*.so
 
-%files tools
+%files -n libmsiecf-tools
 %defattr(644,root,root,755)
 %license COPYING
 %doc AUTHORS README
